# Battery_alerter_android

./: CMakeLists.txt  build.gradle  buildozer.cpes  local.properties  main.py
res/layout/: activity_main.xml
src/main/cpp/: BatInfo.cpp  BatInfo.h  Batarry.cpp
src/main/java/com/example/batinfo/: AndroidManifest.xml  MainActivity.java
